<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/result_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_result_message_finished_quizz_text"
        android:textAppearance="@style/AppTextAppearance.Result.Message"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@id/result_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/result_image"
        style="@style/ResultImageStyle"
        android:src="@drawable/ic_wrong_answer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/result_attempts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_result_attempts_count_wrong_answer_text"
        android:layout_marginTop="24dp"
        android:textAppearance="@style/AppTextAppearance.Result.Attempts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/result_image" />

    <Button
        android:id="@+id/result_button_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_result_next_question_button_text"
        style="@style/ResultNextQuestionButtonStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/result_attempts" />

    <Button
        android:id="@+id/result_button_try_again"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_result_try_again_button_text"
        style="@style/ResultTryAgainButtonStyle"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/result_attempts" />

    <Button
        android:id="@+id/result_button_start_again"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_result_start_again_button_text"
        style="@style/ResultStartAgainButtonStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/result_attempts" />
</androidx.constraintlayout.widget.ConstraintLayout>